# Constitutive_modelling

./: .gitattributes  .gitignore  LICENSE  Module_Solver.py  Module_material_models.py  README.md  README_中文.md  pyproject.toml  solver_documentation.md
config/: Steel_Chaboche.json  Steel_OWII_exponential_fits_n4.json  Steel_OWII_m_10_10_10_10.json  Steel_OWII_multilinear_calibration_n7.json
docs/: USER_GUIDE.md  USER_GUIDE_中文.md  debug_doc_Chaboche_vs_OWII_multiaxial_comparison.md  debug_doc_OWII_1D_3D_consistency_analysis.md  debug_doc_OWII_uniaxial_vs_multiaxial_compare.md  debug_doc_Uniaxial_Chaboche_vs_OWII_sqrt32.md  debug_doc_Uniaxial_vs_Multiaxial_OWII_fully_implicit_diff.md  debug_doc_fix_multiaxial_OWII_zigzag.md  debug_doc_multiaxial_J2_explanation.md  debug_doc_multiaxial_OWII_updates.md
plasticity_solver/: __init__.py  material_models.py  solver.py
src/: Module_Solver.py  Module_material_models.py  material_models_documentation.md
tests/: test_fully_implicit_chaboche_uni_vs_multi.py  test_fully_implicit_owii_uni_vs_multi.py  test_multiaxial_chaboche_stress_control_path.py
