[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasticity-solver"
version = "0.1.0"
description = "J2 plasticity solver with kinematic hardening models (cross-platform: Linux, Windows, macOS)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["plasticity_solver*"]
